# py_crunchbase

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: run-test.yml
py_crunchbase/: __init__.py  api.py  base.py  constants.py  decorators.py  main.py  paginator.py  query_builder.py  utils.py
py_crunchbase/apis/: __init__.py  autocomplete.py  base.py  entities.py  search.py
py_crunchbase/apis/autocomplete/: api.py
py_crunchbase/apis/deleted_entities/: api.py
py_crunchbase/apis/entities/: __init__.py  api.py  base.py  base_.py  cards.py  entities.py  entities_.py  main.py
py_crunchbase/apis/search/: __init__.py  api.py  predicates.py  query_builder.py
py_crunchbase/autocomplete/: __init__.py  api.py  collections.py
py_crunchbase/entities/: __init__.py  acquisitions.py  addresses.py  api.py  base.py  categories.py  category_groups.py  degrees.py  entities.ini  event_appearances.py  events.py  funding_rounds.py  funds.py  investments.py  ipos.py  jobs.py  key_employee_changes.py  layoffs.py  locations.py  organizations.py  ownerships.py  people.py  press_references.py  principals.py  registry.py
py_crunchbase/resources/: __init__.py  base.py  decorators.py  registry.py
py_crunchbase/search/: api.py  query_builder.py
src/py_crunchbase/: __init__.py  constants.py  decorators.py
src/py_crunchbase/apis/: __init__.py  base.py
src/py_crunchbase/entities/: events.py  (+8 more)
tests/: test_constants.py  test_decorators.py  test_main.py  test_paginator.py  test_query_builder.py  test_utils.py
tests/apis/: test_base.py
tests/entities/: test_acquisitions.py  test_addresses.py  test_base.py  test_categories.py  test_category_groups.py  test_degrees.py  test_event_appearances.py  test_events.py  test_funding_rounds.py  test_funds.py  test_investments.py  test_ipos.py  test_jobs.py  test_key_employee_changes.py  test_layoffs.py  test_locations.py  test_organizations.py  test_ownerships.py  test_people.py  test_press_references.py  test_principals.py
(+13 files in other folders)
