[metadata]
name = py_crunchbase
version = 0.0.1
author = Fahad Noor
author_email = fahad.noor91@gmail.com
description = A python client for Crunchbase's REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FahadNoor/py_crunchbase
project_urls =
    Bug Tracker = https://github.com/FahadNoor/py_crunchbase/issues
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src