[metadata]
name = py-crunchbase-api
version = 0.1.1
author = Fahad Noor
author_email = fahad.noor91@gmail.com
description = A python client for Crunchbase's REST API
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    crunchbase
    python crunchbase
license = MIT
url = https://github.com/FahadNoor/py_crunchbase
project_urls =
    Bug Tracker = https://github.com/FahadNoor/py_crunchbase/issues
    Code = https://github.com/FahadNoor/py_crunchbase
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language : : Python :: 3.11
[options]
packages =
    py_crunchbase
    py_crunchbase.apis
    py_crunchbase.apis.autocomplete
    py_crunchbase.apis.deleted_entities
    py_crunchbase.apis.entities
    py_crunchbase.apis.search
    py_crunchbase.entities
install_requires =
    requests>=2.27.1
python_requires = >=3.6